test : Name 객체 생성시 검증 테스트 작성 이름으로 null, 빈칸, 공백에 대한 예외발생 테스트 작성